# paparaz

./: .gitignore  CLAUDE.md  LICENSE  README.md  build.bat  index.html  paparaz.spec  pyproject.toml  release.bat  requirements.txt  version_info.txt
docs/: ARCHITECTURE.md  CHANGELOG.md  PLAN.md  QA_FINDINGS.md  SETTINGS_PLAN.md  TEST_PLAN.md  TOOLS_SPEC.md  UI_SPEC.md
installer/: paparaz_setup.iss
scripts/: make_icon.py  make_installer_images.py  make_social_preview.py
src/paparaz/: __init__.py  __main__.py  app.py
src/paparaz/core/: capture.py  elements.py  export.py  filename_pattern.py  history.py  project.py  recovery.py  settings.py  snap.py
src/paparaz/tools/: base.py  drawing.py  select.py  special.py
src/paparaz/ui/: app_theme.py  canvas.py  canvas_resize_dialog.py  color_palette.py  editor.py  filename_pattern_widget.py  icons.py  layers_panel.py  ocr.py  overlay.py  pin_window.py  settings_dialog.py  side_panel.py  stamps.py  status_bar.py  theme_presets.py  toolbar.py  tray.py
src/paparaz/utils/: hotkey.py  monitors.py  startup.py  updater.py
tests/: test_functional.py  test_qa_extended.py  test_tools_and_properties.py  test_ui_ux.py
